Revert "[type-classes] Merge lworld into type-classes"
This reverts commit aad37f27c617431b01bdb8400762ec12691f7482.